--- a/index.html
+++ b/index.html
@@ -171,9 +171,7 @@
         <p>I am currently unemployed but actively seeking new opportunities. I am eager to apply my skills in IT, cybersecurity, and web development in a professional setting. If you’re interested in collaborating or have any opportunities available, feel free to reach out!</p>
 
         <h3>Get in Touch</h3>
-        <p>Feel free to reach out for collaborations or if you have any questions. You can contact me through the links below:</p>
-        <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">My LinkedIn Profile</a></p>
+        <p>Feel free to reach out for collaborations or if you have any questions.</p>
     </div>
 </body>
 </html>
