--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
                 <p>PicStream is a web application that lets users upload images and videos, generate unique URLs, and easily share them. It also supports metadata for each file, including customizable title, description, and embed color (hex code).</p>
                 <a href="https://github.com/MaestroDelFuego/PicStream.gg" class="link" target="_blank">Check it out on GitHub</a>
             </div>
+             <!-- ZipAura Project -->
+            <div class="project-card">
+                <h4>ZipAura</h4>
+                <p>ZipAura is a user-friendly zip file management tool with a sleek, modern interface. It lets you create, extract, and manage zip archives with ease. The application supports multiple formats and aims to provide a simple yet powerful experience for handling compressed files.</p>
+                <a href="https://github.com/MaestroDelFuego/ZipAura" class="link" target="_blank">Check it out on GitHub</a>
+            </div>
         </div>
 
         <h3>Current Status</h3>
