--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MaestroDelFuego - GitHub</title>
+    <meta property="og:title" content="MaestroDelFuego - GitHub" />
+    <meta property="og:description" content="Hi, I'm MaestroDelFuego! I'm a self-taught IT enthusiast passionate about cybersecurity, web development, and building innovative solutions. I'm also the founder of exciting projects like ZipAura!" />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/160979076?v=4&size=64" />
+    <meta property="og:url" content="https://github.com/MaestroDelFuego" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="MaestroDelFuego - GitHub" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="MaestroDelFuego - GitHub">
+    <meta name="twitter:description" content="Hi, I'm MaestroDelFuego! I'm a self-taught IT enthusiast passionate about cybersecurity, web development, and building innovative solutions. I'm also the founder of exciting projects like ZipAura!">
+    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/160979076?v=4&size=64">
     <style>
         /* Basic Reset */
         * {
