--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
   <p>I’m currently open to new opportunities or collaborations in IT, web dev, or cybersecurity.</p>
   <p>I'm also the <strong>Community Manager</strong> at <em>Wings of the People's Liberation</em>, a War Thunder squadron and active Discord community.</p>
   <p>Join us on Discord: <a href="https://discord.gg/wFnQyPPFWy" target="_blank" rel="noopener noreferrer">discord.gg/wFnQyPPFWy</a></p>
+  <p>My personal discord server: https://discord.gg/urd5mxBXcW</p>
 </div>
 
   <footer>
