--- a/index.html
+++ b/index.html
@@ -206,6 +206,17 @@
         <p>A sleek zip file manager that supports multiple formats with intuitive controls and UI.</p>
         <a href="https://github.com/MaestroDelFuego/ZipAura" target="_blank" class="link" rel="noopener noreferrer">View on GitHub</a>
       </div>
+      <div class="project-card">
+        <h3>ZeroclickLAN</h3>
+        <p>A zero-configuration toolkit for local networking. Seamlessly connect and discover devices on LAN with no server sided setup required.</p>
+        <a href="https://github.com/MaestroDelFuego/ZeroclickLAN" target="_blank" class="link" rel="noopener noreferrer">View on GitHub</a>
+      </div>
+
+      <div class="project-card">
+        <h3>OpenDNS (Custom)</h3>
+        <p>A lightweight, C#-based DNS server with support for conditional domain blocking, wildcard matching, and intelligent forwarding to upstream resolvers like Google DNS. Includes customizable subcategory filters and IP-based access control.</p>
+      <a href="https://github.com/MaestroDelFuego/OpenDNS" target="_blank" class="link" rel="noopener noreferrer">View on GitHub</a>
+      </div>
     </div>
   </div>
 
