--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   <p>I’m currently open to new opportunities or collaborations in IT, web dev, or cybersecurity.</p>
   <p>I'm also the <strong>Community Manager</strong> at <em>Wings of the People's Liberation</em>, a War Thunder squadron and active Discord community.</p>
   <p>Join us on Discord: <a href="https://discord.gg/wFnQyPPFWy" target="_blank" rel="noopener noreferrer">discord.gg/wFnQyPPFWy</a></p>
-  <p>My personal discord server: https://discord.gg/urd5mxBXcW</p>
+  <p>My personal discord server: <a href="https://discord.gg/urd5mxBXcW" target="_blank" rel="noopener noreferrer">discord.gg/urd5mxBXcW</a></p>
 </div>
 
   <footer>
