--- a/index.html
+++ b/index.html
@@ -217,6 +217,10 @@
         <p>A lightweight, C#-based DNS server with support for conditional domain blocking, wildcard matching, and intelligent forwarding to upstream resolvers like Google DNS. Includes customizable subcategory filters and IP-based access control.</p>
       <a href="https://github.com/MaestroDelFuego/OpenDNS" target="_blank" class="link" rel="noopener noreferrer">View on GitHub</a>
       </div>
+      <div class="project-card">
+  <h3>Eroded Server Solutions (2020–2024)</h3>
+  <p>A long-running Minecraft multiplayer server featuring custom-coded bots, economy systems, and datapacks. Hosted multiple gamemodes including Zombie Survival, Skyblock, and standard Survival — all integrated with a player-driven economy and administrative automation.</p>
+</div>
     </div>
   </div>
 
