--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta property="og:title" content="MaestroDelFuego - Portfolio" />
+<meta property="og:description" content="Cybersecurity Enthusiast • Web Developer • Project Builder. Explore my projects including OpenDNS, ZeroclickLAN, and Eroded Server Solutions." />
+<meta property="og:image" content="https://avatars.githubusercontent.com/u/160979076?v=4" />
+<meta property="og:url" content="https://maestrodelfuego.github.io/MaestroDelFuego/" />
+<meta property="og:type" content="website" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MaestroDelFuego - Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <link rel="icon" href="https://avatars.githubusercontent.com/u/160979076?v=4" />
+  
   <style>
     * {
       margin: 0;
