--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@
   </div>
 
 <div class="container contact" id="contact">
-  <h2 class="section-title">Get in Touch</h2>
+  <h2 class="section-title">More info</h2>
   <p>I’m currently open to new opportunities or collaborations in IT, web dev, or cybersecurity.</p>
   <p>I'm also the <strong>Community Manager</strong> at <em>Wings of the People's Liberation</em>, a War Thunder squadron and active Discord community.</p>
-  <p>Join us on Discord: <a href="https://discord.gg/wFnQyPPFWy" target="_blank" rel="noopener noreferrer">discord.gg/wFnQyPPFWy</a></p>
+  <h2 class="section-title">Get in Touch</h2>
   <p>My personal discord server: <a href="https://discord.gg/urd5mxBXcW" target="_blank" rel="noopener noreferrer">discord.gg/urd5mxBXcW</a></p>
 </div>
 
