--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@
       <a href="https://github.com/MaestroDelFuego/OpenDNS" target="_blank" class="link" rel="noopener noreferrer">View on GitHub</a>
       </div>
       <div class="project-card">
+  <h3>Ender Empire (2025–Present)</h3>
+  <p>A heavily-modded Minecraft Java 1.20.1 CurseForge server featuring numerous mods and plugins to shape the economy, including Create and Planes mods. Join the community and experience a unique gameplay environment.</p>
+  <p>Server IP: <code>enterprise-laundry.joinmc.link</code></p>
+  <a href="https://discord.gg/F5tZQXsxne" target="_blank" class="link" rel="noopener noreferrer">Join the Discord</a>
+</div>
+      <div class="project-card">
   <h3>Eroded Server Solutions (2020–2024)</h3>
   <p>A long-running Minecraft multiplayer server featuring custom-coded bots, economy systems, and datapacks. Hosted multiple gamemodes including Zombie Survival, Skyblock, and standard Survival — all integrated with a player-driven economy and administrative automation.</p>
 </div>
