--- a/index.html
+++ b/index.html
@@ -196,6 +196,15 @@
     <h2 class="section-title">Projects</h2>
     <div class="projects">
       <div class="project-card">
+        <h3 class="section-title" style="color: #f6ad55;">🚨 Featured: Northbridge Roleplay</h2>
+<div class="project-card" style="border: 2px solid #f6ad55; background-color: #1a202c; display: flex; flex-direction: column; align-items: center; text-align: center;">
+  <img src="https://cdn.discordapp.com/icons/1343354364299051138/d536a02cce157e121aaccbcaaff36dd2.webp" alt="Northbridge Roleplay Icon" style="width: 100px; height: 100px; border-radius: 20%; margin-bottom: 15px; border: 3px solid #f6ad55;" />
+  <h3 style="color: #f6ad55; font-size: 1.6rem; margin-bottom: 10px;">Northbridge Roleplay (FiveM)</h3>
+  <p style="color: #fbd38d;">Explore a detailed world with over <strong>40+ custom interiors</strong>: PDs, clubs, mechanic shops, luxury homes & more.</p>
+  <p style="color: #fbd38d;">Enjoy <strong>unique jobs</strong>, immersive RP, and <strong>optimized performance</strong> in a feature-rich FiveM experience.</p>
+  <a href="https://discord.gg/wf4s7kwZuN" target="_blank" class="link" rel="noopener noreferrer" style="background-color: #f6ad55; color: #1a202c; margin-top: 15px;">Join the Discord</a>
+</div>
+
         <h3>Phishing Authority API</h3>
         <p>A powerful API that analyzes URLs for phishing risks using DNS, age, keywords, and more.</p>
         <a href="https://github.com/MaestroDelFuego/PhishingAuthority-API/tree/main" target="_blank" class="link" rel="noopener noreferrer">View on GitHub</a>
