--- a/index.html
+++ b/index.html
@@ -202,7 +202,15 @@
   <h3 style="color: #f6ad55; font-size: 1.6rem; margin-bottom: 10px;">Northbridge Roleplay (FiveM)</h3>
   <p style="color: #fbd38d;">Explore a detailed world with over <strong>40+ custom interiors</strong>: PDs, clubs, mechanic shops, luxury homes & more.</p>
   <p style="color: #fbd38d;">Enjoy <strong>unique jobs</strong>, immersive RP, and <strong>optimized performance</strong> in a feature-rich FiveM experience.</p>
+  <p>Cfx.re Server List: <code>https://servers.fivem.net/servers/detail/dqrdbd</code></p>
   <a href="https://discord.gg/wf4s7kwZuN" target="_blank" class="link" rel="noopener noreferrer" style="background-color: #f6ad55; color: #1a202c; margin-top: 15px;">Join the Discord</a>
+</div>
+
+<div class="project-card">
+  <h3>Ender Empire (2025–Present)</h3>
+  <p>A heavily-modded Minecraft Java 1.20.1 CurseForge server featuring numerous mods and plugins to shape the economy, including Create and Planes mods. Join the community and experience a unique gameplay environment.</p>
+  <p>Server IP: <code>enterprise-laundry.joinmc.link</code></p>
+  <a href="https://discord.gg/F5tZQXsxne" target="_blank" class="link" rel="noopener noreferrer">Join the Discord</a>
 </div>
 
         <h3>Phishing Authority API</h3>
@@ -232,12 +240,7 @@
         <p>A lightweight, C#-based DNS server with support for conditional domain blocking, wildcard matching, and intelligent forwarding to upstream resolvers like Google DNS. Includes customizable subcategory filters and IP-based access control.</p>
       <a href="https://github.com/MaestroDelFuego/OpenDNS" target="_blank" class="link" rel="noopener noreferrer">View on GitHub</a>
       </div>
-      <div class="project-card">
-  <h3>Ender Empire (2025–Present)</h3>
-  <p>A heavily-modded Minecraft Java 1.20.1 CurseForge server featuring numerous mods and plugins to shape the economy, including Create and Planes mods. Join the community and experience a unique gameplay environment.</p>
-  <p>Server IP: <code>enterprise-laundry.joinmc.link</code></p>
-  <a href="https://discord.gg/F5tZQXsxne" target="_blank" class="link" rel="noopener noreferrer">Join the Discord</a>
-</div>
+
       <div class="project-card">
   <h3>Eroded Server Solutions (2020–2024)</h3>
   <p>A long-running Minecraft multiplayer server featuring custom-coded bots, economy systems, and datapacks. Hosted multiple gamemodes including Zombie Survival, Skyblock, and standard Survival — all integrated with a player-driven economy and administrative automation.</p>
