--- a/index.html
+++ b/index.html
@@ -195,24 +195,26 @@
   <div class="container" id="projects">
     <h2 class="section-title">Projects</h2>
     <div class="projects">
-      <div class="project-card">
-        <h3 class="section-title" style="color: #f6ad55;">🚨 Featured: Northbridge Roleplay</h2>
+      <!-- NORTHBRIDGE ROLEPLAY -->
 <div class="project-card" style="border: 2px solid #f6ad55; background-color: #1a202c; display: flex; flex-direction: column; align-items: center; text-align: center;">
   <img src="https://cdn.discordapp.com/icons/1343354364299051138/d536a02cce157e121aaccbcaaff36dd2.webp" alt="Northbridge Roleplay Icon" style="width: 100px; height: 100px; border-radius: 20%; margin-bottom: 15px; border: 3px solid #f6ad55;" />
-  <h3 style="color: #f6ad55; font-size: 1.6rem; margin-bottom: 10px;">Northbridge Roleplay (FiveM)</h3>
+  <h3 style="color: #f6ad55; font-size: 1.6rem; margin-bottom: 10px;">🚨 Northbridge Roleplay (FiveM)</h3>
   <p style="color: #fbd38d;">Explore a detailed world with over <strong>40+ custom interiors</strong>: PDs, clubs, mechanic shops, luxury homes & more.</p>
   <p style="color: #fbd38d;">Enjoy <strong>unique jobs</strong>, immersive RP, and <strong>optimized performance</strong> in a feature-rich FiveM experience.</p>
-  <p>Cfx.re Server List: <code>https://servers.fivem.net/servers/detail/dqrdbd</code></p>
+  <p style="color: #fbd38d;">Cfx.re Server List: <code>https://servers.fivem.net/servers/detail/dqrdbd</code></p>
   <a href="https://discord.gg/wf4s7kwZuN" target="_blank" class="link" rel="noopener noreferrer" style="background-color: #f6ad55; color: #1a202c; margin-top: 15px;">Join the Discord</a>
 </div>
 
-<div class="project-card">
-  <h3>Ender Empire (2025–Present)</h3>
-  <p>A heavily-modded Minecraft Java 1.20.1 CurseForge server featuring numerous mods and plugins to shape the economy, including Create and Planes mods. Join the community and experience a unique gameplay environment.</p>
-  <p>Server IP: <code>enterprise-laundry.joinmc.link</code></p>
-  <a href="https://discord.gg/F5tZQXsxne" target="_blank" class="link" rel="noopener noreferrer">Join the Discord</a>
+<!-- ENDER EMPIRE -->
+<div class="project-card" style="border: 2px solid #4299e1; background-color: #1a202c; display: flex; flex-direction: column; align-items: center; text-align: center;">
+  <img src="https://cdn.discordapp.com/icons/1358518504453705969/6f80b650a338435a974d21b2df4b0064.webp" alt="Ender Empire Icon" style="width: 90px; height: 90px; border-radius: 20%; margin-bottom: 15px; border: 3px solid #4299e1;" />
+  <h3 style="color: #63b3ed; font-size: 1.6rem; margin-bottom: 10px;">🌀 Ender Empire (2025–Present)</h3>
+  <p style="color: #bee3f8;">A heavily-modded Minecraft Java 1.20.1 CurseForge server with <strong>Create</strong>, <strong>Planes</strong>, and more — shaping an evolving player economy.</p>
+  <p style="color: #bee3f8;">Enjoy custom plugins, voice chat, and seamless mod integration.</p>
+  <p style="color: #bee3f8;">Server IP: <code>enterprise-laundry.joinmc.link</code></p>
+  <a href="https://discord.gg/F5tZQXsxne" target="_blank" class="link" rel="noopener noreferrer" style="background-color: #4299e1; color: #1a202c; margin-top: 15px;">Join the Discord</a>
 </div>
-
+      <div class="project-card">
         <h3>Phishing Authority API</h3>
         <p>A powerful API that analyzes URLs for phishing risks using DNS, age, keywords, and more.</p>
         <a href="https://github.com/MaestroDelFuego/PhishingAuthority-API/tree/main" target="_blank" class="link" rel="noopener noreferrer">View on GitHub</a>
