--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <!-- NORTHBRIDGE ROLEPLAY -->
 <div class="project-card" style="border: 2px solid #f6ad55; background-color: #1a202c; display: flex; flex-direction: column; align-items: center; text-align: center;">
   <img src="https://cdn.discordapp.com/icons/1343354364299051138/d536a02cce157e121aaccbcaaff36dd2.webp" alt="Northbridge Roleplay Icon" style="width: 100px; height: 100px; border-radius: 20%; margin-bottom: 15px; border: 3px solid #f6ad55;" />
-  <h3 style="color: #f6ad55; font-size: 1.6rem; margin-bottom: 10px;">🚨 Northbridge Roleplay (FiveM)</h3>
+  <h3 style="color: #f6ad55; font-size: 1.6rem; margin-bottom: 10px;">🚨 Northbridge Roleplay (2025–Present)</h3>
   <p style="color: #fbd38d;">Explore a detailed world with over <strong>40+ custom interiors</strong>: PDs, clubs, mechanic shops, luxury homes & more.</p>
   <p style="color: #fbd38d;">Enjoy <strong>unique jobs</strong>, immersive RP, and <strong>optimized performance</strong> in a feature-rich FiveM experience.</p>
   <p style="color: #fbd38d;">Cfx.re Server List: <code>https://servers.fivem.net/servers/detail/dqrdbd</code></p>
