--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
     <div class="projects">
       <!-- NORTHBRIDGE ROLEPLAY -->
 <div class="project-card" style="border: 2px solid #f6ad55; background-color: #1a202c; display: flex; flex-direction: column; align-items: center; text-align: center;">
+  <h3 class="section-title" style="color: #f6ad55;">🚨 Featured: Northbridge Roleplay</h2>
   <img src="https://cdn.discordapp.com/icons/1343354364299051138/d536a02cce157e121aaccbcaaff36dd2.webp" alt="Northbridge Roleplay Icon" style="width: 100px; height: 100px; border-radius: 20%; margin-bottom: 15px; border: 3px solid #f6ad55;" />
   <h3 style="color: #f6ad55; font-size: 1.6rem; margin-bottom: 10px;">🚨 Northbridge Roleplay (2025–Present)</h3>
   <p style="color: #fbd38d;">Explore a detailed world with over <strong>40+ custom interiors</strong>: PDs, clubs, mechanic shops, luxury homes & more.</p>
@@ -207,6 +208,7 @@
 
 <!-- ENDER EMPIRE -->
 <div class="project-card" style="border: 2px solid #4299e1; background-color: #1a202c; display: flex; flex-direction: column; align-items: center; text-align: center;">
+  <h3 class="section-title" style="color: #f6ad55;">🚨 Featured: Ender Empire</h2>
   <img src="https://cdn.discordapp.com/icons/1358518504453705969/6f80b650a338435a974d21b2df4b0064.webp" alt="Ender Empire Icon" style="width: 90px; height: 90px; border-radius: 20%; margin-bottom: 15px; border: 3px solid #4299e1;" />
   <h3 style="color: #63b3ed; font-size: 1.6rem; margin-bottom: 10px;">🌀 Ender Empire (2025–Present)</h3>
   <p style="color: #bee3f8;">A heavily-modded Minecraft Java 1.20.1 CurseForge server with <strong>Create</strong>, <strong>Planes</strong>, and more — shaping an evolving player economy.</p>
