--- a/index.html
+++ b/index.html
@@ -203,7 +203,14 @@
   <p style="color: #fbd38d;">Explore a detailed world with over <strong>40+ custom interiors</strong>: PDs, clubs, mechanic shops, luxury homes & more.</p>
   <p style="color: #fbd38d;">Enjoy <strong>unique jobs</strong>, immersive RP, and <strong>optimized performance</strong> in a feature-rich FiveM experience.</p>
   <p style="color: #fbd38d;">Cfx.re Server List: <code>https://servers.fivem.net/servers/detail/dqrdbd</code></p>
-  <a href="https://discord.gg/wf4s7kwZuN" target="_blank" class="link" rel="noopener noreferrer" style="background-color: #f6ad55; color: #1a202c; margin-top: 15px;">Join the Discord</a>
+  <p style="color: #fbd38d;">
+  Cfx.re Server List:
+  <code>
+  <a href="https://servers.fivem.net/servers/detail/dqrdbd" target="_blank" rel="noopener noreferrer" style="color: #f6ad55; word-break: break-all; text-decoration: underline;">
+    https://servers.fivem.net/servers/detail/dqrdbd
+  </a>
+  </code> 
+</p>
 </div>
 
 <!-- ENDER EMPIRE -->
@@ -213,14 +220,7 @@
   <h3 style="color: #63b3ed; font-size: 1.6rem; margin-bottom: 10px;">🌀 Ender Empire (2025–Present)</h3>
   <p style="color: #bee3f8;">A heavily-modded Minecraft Java 1.20.1 CurseForge server with <strong>Create</strong>, <strong>Planes</strong>, and more — shaping an evolving player economy.</p>
   <p style="color: #bee3f8;">Enjoy custom plugins, voice chat, and seamless mod integration.</p>
-  <p style="color: #fbd38d;">
-  Cfx.re Server List:
-  <code>
-  <a href="https://servers.fivem.net/servers/detail/dqrdbd" target="_blank" rel="noopener noreferrer" style="color: #f6ad55; word-break: break-all; text-decoration: underline;">
-    https://servers.fivem.net/servers/detail/dqrdbd
-  </a>
-  </code> 
-</p>
+  <p style="color: #bee3f8;">Server IP: <code>enterprise-laundry.joinmc.link</code></p>
   <a href="https://discord.gg/F5tZQXsxne" target="_blank" class="link" rel="noopener noreferrer" style="background-color: #4299e1; color: #1a202c; margin-top: 15px;">Join the Discord</a>
 </div>
       <div class="project-card">
