--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
   </a>
   </code> 
 </p>
+  <a href="https://discord.gg/wf4s7kwZuN" target="_blank" class="link" rel="noopener noreferrer" style="background-color: #1a202c; color: #1a202c; margin-top: 15px;">Join the Discord</a>
 </div>
 
 <!-- ENDER EMPIRE -->
