--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta property="og:title" content="MaestroDelFuego - Portfolio" />
-<meta property="og:description" content="Cybersecurity Enthusiast • Web Developer • Project Builder. Explore my projects including OpenDNS, ZeroclickLAN, and Eroded Server Solutions." />
+<meta property="og:description" content="Cybersecurity Enthusiast • Web Developer • Project Builder. Explore my projects here and get to know a little more about me." />
 <meta property="og:image" content="https://avatars.githubusercontent.com/u/160979076?v=4" />
 <meta property="og:url" content="https://maestrodelfuego.github.io/MaestroDelFuego/" />
 <meta property="og:type" content="website" />
@@ -265,6 +265,20 @@
   <p>I'm also the <strong>Community Manager</strong> at <em>Wings of the People's Liberation</em>, a War Thunder squadron and active Discord community.</p>
   <h2 class="section-title">Get in Touch</h2>
   <p>My personal discord server: <a href="https://discord.gg/urd5mxBXcW" target="_blank" rel="noopener noreferrer">discord.gg/urd5mxBXcW</a></p>
+</div>
+<div class="container about-me" id="about-me">
+  <h2 class="section-title">About Me</h2>
+  <p>I started creating single-player mods at age 13, which sparked my passion for game development and programming. Since then, I’ve worked on several projects, including the EnderEmpire Minecraft server, where I designed websites, built in-game item stores, and developed and managed Discord bots.</p>
+  <p>At 16, I began studying networking, cybersecurity, and emerging technologies at college. Now 17, I’ve completed the first step of my Higher Level 3 course in Information Technology. Alongside my studies, I’ve developed multiple projects such as:</p>
+  <ul>
+    <li><strong>Phishing Authority API</strong></li>
+    <li><strong>Ender Empire</strong></li>
+    <li><strong>Northbridge Roleplay</strong></li>
+    <li><strong>PicStream.gg</strong></li>
+    <li><strong>Custom OpenDNS</strong></li>
+    <li>Numerous scripts for FiveM and QB Core</li>
+  </ul>
+  <p>I’m passionate about creating innovative solutions and continuously expanding my skill set in IT and cybersecurity.</p>
 </div>
 
   <footer>
