--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 </div>
       <div class="project-card">
         <h3>Phishing Authority API</h3>
-        <p>A powerful API that analyzes URLs for phishing risks using DNS, age, keywords, and more.</p>
+        <p>Powerful API version of the website analyzes URLs for potential security risks. It checks domain extensions (e.g., .xin, .ru), verifies HTTPS usage, cross-references against whitelisted domains, and scans for suspicious keywords, providing risk scores and detailed assessments.</p>
         <a href="https://github.com/MaestroDelFuego/PhishingAuthority-API/tree/main" target="_blank" class="link" rel="noopener noreferrer">View on GitHub</a>
       </div>
 
