--- a/index.html
+++ b/index.html
@@ -261,25 +261,28 @@
 
 <div class="container contact" id="contact">
   <h2 class="section-title">More info</h2>
-  <p>I’m currently open to new opportunities or collaborations in IT, web dev, or cybersecurity.</p>
-  <p>I'm also the <strong>Community Manager</strong> at <em>Wings of the People's Liberation</em>, a War Thunder squadron and active Discord community.</p>
-  <h2 class="section-title">Get in Touch</h2>
-  <p>My personal discord server: <a href="https://discord.gg/urd5mxBXcW" target="_blank" rel="noopener noreferrer">discord.gg/urd5mxBXcW</a></p>
-</div>
 <div class="container about-me" id="about-me">
   <h2 class="section-title">About Me</h2>
-  <p>I started creating single-player mods at age 13, which sparked my passion for game development and programming. Since then, I’ve worked on several projects, including the EnderEmpire Minecraft server, where I designed websites, built in-game item stores, and developed and managed Discord bots.</p>
+  <p>I started creating single-player mods for video games at age 13, which sparked my passion for game development and programming. Since then, I’ve worked on several projects, including the Eroded Minecraft server, where I designed websites, built in-game item stores, and developed and managed Discord bots.</p>
   <p>At 16, I began studying networking, cybersecurity, and emerging technologies at college. Now 17, I’ve completed the first step of my Higher Level 3 course in Information Technology. Alongside my studies, I’ve developed multiple projects such as:</p>
+  <br>
   <ul>
     <li><strong>Phishing Authority API</strong></li>
     <li><strong>Ender Empire</strong></li>
     <li><strong>Northbridge Roleplay</strong></li>
     <li><strong>PicStream.gg</strong></li>
     <li><strong>Custom OpenDNS</strong></li>
-    <li>Numerous scripts for FiveM and QB Core</li>
+    <li></strong>Numerous scripts for FiveM and QB Core</strong></li>
   </ul>
   <p>I’m passionate about creating innovative solutions and continuously expanding my skill set in IT and cybersecurity.</p>
+  </div>
+  <br>
+  <p>I’m currently open to new opportunities or collaborations in IT, web dev, or cybersecurity.</p>
+  <p>I'm also the <strong>Community Manager</strong> at <em>Wings of the People's Liberation</em>, a War Thunder squadron and active Discord community.</p>
+  <h2 class="section-title">Get in Touch</h2>
+  <p>My personal discord server: <a href="https://discord.gg/urd5mxBXcW" target="_blank" rel="noopener noreferrer">discord.gg/urd5mxBXcW</a></p>
 </div>
+
 
   <footer>
     &copy; 2025 MaestroDelFuego. Built with ❤️ and HTML/CSS.
